updated nginx config

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,9 +2,6 @@ server {
     listen 80;
     server_name localhost;
 
-    root /var/www/ambrozia;
-    index html/index.html;
-
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
@@ -20,18 +17,25 @@ server {
 
     # Handle HTML pages in the html directory
     location / {
-        try_files $uri $uri/ /html/index.html;
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+        try_files $uri $uri/ /index.html =404; # Важливо для SPA
     }
 
-    location /html/ {
-        try_files $uri =404;
+    location /api/ {
+        proxy_pass http://backend:3000; # <--- Цей рядок коректний
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
 
     # Handle static files
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
-        expires 30d;
-        add_header Cache-Control "public, no-transform";
-    }
+    # location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
+    #     expires 30d;
+    #     add_header Cache-Control "public, no-transform";
+    # }
 
     # Error pages
     error_page 404 /html/404.html;
